--- a/composer-dependencias-autoload-publicacoes/composer.json
+++ b/composer-dependencias-autoload-publicacoes/composer.json
@@ -8,5 +8,8 @@
             "email": "walberg.s48@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "^7.9",
+        "symfony/dom-crawler": "^4.2"
+    }
 }
