--- a/composer-dependencias-autoload-publicacoes/composer.json
+++ b/composer-dependencias-autoload-publicacoes/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^7.9",
-        "symfony/dom-crawler": "^4.2"
+        "symfony/dom-crawler": "^4.2",
+        "symfony/css-selector": "^7.2"
     }
 }
