--- a/composer-dependencias-autoload-publicacoes/composer.json
+++ b/composer-dependencias-autoload-publicacoes/composer.json
@@ -12,5 +12,10 @@
         "guzzlehttp/guzzle": "^7.9",
         "symfony/dom-crawler": "^4.2",
         "symfony/css-selector": "^7.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Alura\\BuscadorDeNoticias\\": "src/"
+        }
     }
 }
