--- a/composer-dependencias-autoload-publicacoes/composer.json
+++ b/composer-dependencias-autoload-publicacoes/composer.json
@@ -17,5 +17,8 @@
         "psr-4": {
             "Alura\\BuscadorDeNoticias\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.0"
     }
 }
